--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
   "compilerOptions": {
     "jsx": "react-jsx",
     "allowImportingTsExtensions": true,
+    "emitDeclarationOnly": true,
     "target": "ESNext",
     "module": "ESNext",
     "moduleResolution": "node",
