--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "compilerOptions": {
     "jsx": "react-jsx",
+    "allowImportingTsExtensions": false,
     "target": "ESNext",
     "module": "ESNext",
     "moduleResolution": "node",
